--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,18 @@
 {
-    "name": "dimafe6/bank-id",
+    "name": "puggan/bank-id",
     "type": "library",
     "description": "Library for Swedish BankID",
     "keywords": [
-        "dimafe6",
+        "puggan",
         "bank-id"
     ],
-    "homepage": "https://github.com/dimafe6/bank-id",
+    "homepage": "https://github.com/puggan/bank-id",
     "license": "MIT",
     "authors": [
+        {
+            "name": "Puggan",
+            "email": "puggan@spiro.se"
+        },
         {
             "name": "Dmitry Feshchenko",
             "email": "dimafe2000@gmail.com"
@@ -17,7 +21,6 @@
             "name": "Oleg Davudyuk",
             "email": "ilveann@gmail.com"
         }
-
     ],
     "require": {
         "php" : ">=5.6.0",
@@ -28,7 +31,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Dimafe6\\BankID\\": "src"
+            "Puggan\\BankID\\": "src"
         }
     },
     "autoload-dev": {
