--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "ext-soap": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.7.* || 6.3.*"
+    "phpunit/phpunit": "^4.8.36 || ^5.7.27 || ^6.5.8 || ^7.2.4"
   },
   "autoload": {
     "psr-4": {
